@@ -98,7 +98,7 @@ namespace Gendarme.Rules.Design {
 		public RuleResult CheckMethod (MethodDefinition method)
 		{
 			// rules do not apply to constructors, methods returning an array, properties
-			if (method.IsConstructor || method.IsSpecialName || method.ReturnType.ReturnType.IsArray ())
+			if (method.IsConstructor || method.IsSpecialName)
 				return RuleResult.DoesNotApply;
 
 			// we don't apply the rule to overrides since the base method can be
@@ -107,24 +107,30 @@ namespace Gendarme.Rules.Design {
 			if (method.IsVirtual && !method.IsNewSlot)
 				return RuleResult.DoesNotApply;
 
+			// ignore methods returning arrays
+			TypeReference return_type = method.ReturnType.ReturnType;
+			if (return_type.IsArray ())
+				return RuleResult.DoesNotApply;
+
 			// rules do not apply to code generated by the compiler (e.g. anonymous methods)
 			// or generated by a tool (e.g. web services)
 			if (method.IsGeneratedCode ())
 				return RuleResult.DoesNotApply;
 
+			string name = method.Name;
 			// ignore the some common Get* method names used in the framework
 			foreach (string s in whitelist) {
-				if (method.Name == s)
+				if (name == s)
 					return RuleResult.DoesNotApply;
 			}
 
 			// rule applies
 
 			// If it starts with "get" or "is" or "has", has no parameters and returns something
-			bool get = method.Name.StartsWith ("get", StringComparison.OrdinalIgnoreCase);
-			bool isp = method.Name.StartsWith ("is", StringComparison.OrdinalIgnoreCase);
-			bool has = method.Name.StartsWith ("has", StringComparison.OrdinalIgnoreCase);
-			if ((get || isp || has) && (method.Parameters.Count == 0) && (method.ReturnType.ReturnType.FullName != Void)) {
+			bool get = name.StartsWith ("get", StringComparison.OrdinalIgnoreCase);
+			bool isp = name.StartsWith ("is", StringComparison.OrdinalIgnoreCase);
+			bool has = name.StartsWith ("has", StringComparison.OrdinalIgnoreCase);
+			if ((get || isp || has) && (method.Parameters.Count == 0) && (return_type.FullName != Void)) {
 				// if it's a getter then look for a setter (to complete the report)
 				string msg = get ? ReportAssociatedSetter (method) : String.Empty;
 				Runner.Report (method, Severity.Low, Confidence.Normal, msg);
